# dotdict-bench

./: README.md  pyproject.toml
.github/workflows/: build.yml
dotdict-bench/: __main__.py  apis.py  cases.py  sets.py
dotdict_bench/: sets.py  utils.py
